# slopgrep

./: .gitignore  LICENSE  README.md  pyproject.toml
reports/: dissertation-chapters-slopgrep-report.md  phd-dissertation-slopgrep-clean-report.md
slopgrep/: cli.py  core.py  default_rules.toml
tests/: test_slopgrep.py
